# konfigmapedit

./: .gitignore  README.md  konfigmapedit  konfigmapedit.py  pyproject.toml  requirements.txt
src/konfigmapedit/: __main__.py  app.py  app_module.py
