# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konfigmapedit"
version = "0.1.0"
description = "Edit multi-file Kubernetes configmaps by downloading them into a folder, let you edit in an interactive shell and uploads them after."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Armin Zentai", email = "armin@zentai.name" }]
keywords = ["kubernetes", "configmap", "edit", "editor", "interactive"]
dependencies = [
    'kubernetes >= 26.0.0'
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ['pip-tools']

[projects.urls]
homepage = "https://github.com/zarmin/konfigmapedit"

[project.scripts]
konfigmapedit = "konfigmapedit.__main__:main"
